--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -1,1 +1,75 @@
-<h1> Chatroom index Page </h1>
+
+<h4 class="ui center aligned medium icon header">
+    <i class="circular orange coffee icon"></i>
+    Say Something
+</h4>
+
+<div class="ui two cloumn grid">
+    <div class="twelve wide column">
+        <div class="ui fluid raised card chatbox">
+            <div class="content">
+                <div class="uifeed">
+                    <div class="event">
+                        <div class="content">
+                        <div class="summary">
+                            <em>Elliot Fu</em>: Test message
+                        </div>
+                        </div>
+                    </div>
+                    <div class="event">
+                        <div class="content">
+                        <div class="summary">
+                            <a>Stevie Feliciano</a> added <a>Elliot Fu</a> as a friend
+                        </div>
+                        </div>
+                    </div>
+                    <div class="event">
+                        <div class="content">
+                        <div class="summary">
+                            <a>Helen Troy</a> added <a>Christian Rocha</a> as a friend
+                        </div>
+                        </div>
+                    </div>
+                    <div class="event">
+                        <div class="content">
+                            <div class="summary">
+                                <a>Christian Rocha</a> signed up for the  site.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="extra content">
+                <form class="ui reply form">
+                    <div class="field">
+                        <textarea></textarea>
+                        <div class="ui fluid icon input">
+                            <input type="text" placeholder="Enter a message">
+                            <i class="bordered inverted orange edit icon"></i>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>    
+    </div>
+
+    <div class="four wide column">
+        <div class="ui fluid raised card chatbox">
+            <div class="content">
+                <div class="ui inverted vertical menu">
+                    <a class="active item">
+                        Home
+                    </a>
+
+                    <a class="item">
+                        Messages
+                    </a>
+
+                    <a class="item">
+                        Friends
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
